[package]
edition = "2021"
name    = "mouse"
version = "0.1.0"

[[bin]]
name = "mouse"
path = "./src/bin/main.rs"

[dependencies]
critical-section = "1.2.0"
embedded-sensors = { version = "0.1.1", features = ["mpu6500"]}
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32s3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
esp-wifi = { version = "0.12.0", features = ["esp32s3", "wifi", "ble", "log", "esp-alloc"]}

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
