[package]
edition = "2021"
name    = "mouse"
version = "0.1.0"

[[bin]]
name = "mouse"
path = "./src/bin/main.rs"

[dependencies]
bt-hci = 
critical-section = "1.2.0"
embedded-sensors = { version = "0.1.1", features = ["mpu6500"]}
esp-backtrace = { version = "0.15.0", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32s3", "unstable"] }
esp-alloc = { version = "0.8.0", features = ["esp32s3"] }
esp-radio = { version = "0.15.0", features = ["esp32s3", "unstable", "ble", "log-04"] }
esp-preempt = {version = "0.0.1", features = ["esp32s3", "log-04"] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
log = { version = "0.4.21" }
trouble-host = { git = "https://github.com/embassy-rs/trouble", rev = "366ee88", features = [
    "default-packet-pool-mtu-255",
    "derive",
    "scan",
] }
static_cell = "2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
